--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body  {
 	margin: auto;
 	background: #FFFFFF;
 	height: auto;
-	-webkit-box-shadow: 0px 0px 15px 5px rgba(0, 1, 1, 0.2);
-	box-shadow: 0px 0px 15px 5px rgba(0, 1, 1, 0.2);
+	-webkit-box-shadow: 0 0 15px 5px rgba(0, 1, 1, 0.2);
+	box-shadow: 0 0 15px 5px rgba(0, 1, 1, 0.2);
 }
 
 
@@ -450,8 +450,8 @@ body  {
 	position: absolute;
 	left: 50%;
 	-webkit-transform: translatex(-50%);
-	    -ms-transform: translatex(-50%);
-	        transform: translatex(-50%);
+	-ms-transform: translatex(-50%);
+	transform: translatex(-50%);
 	max-width: 458px;
 	background-color: #FFFFFF;
 	-webkit-box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
@@ -463,23 +463,23 @@ body  {
 
 .register-form-hidden  {
 	-webkit-animation: form-hidden;
-	        animation: form-hidden;
+	animation: form-hidden;
 	-webkit-animation-duration: 0s;
-	        animation-duration: 0s;
+	animation-duration: 0s;
 	-webkit-animation-fill-mode: forwards;
-	        animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
 }
 
 
 @-webkit-keyframes form-hidden  {
 	0%{
 		-webkit-transform: translate(-50%, 0%);
-		        transform: translate(-50%, 0%);
+		transform: translate(-50%, 0%);
 		
 	}
 	100%{
 		-webkit-transform: translate(-50%, -100%);
-		        transform: translate(-50%, -100%);
+		transform: translate(-50%, -100%);
 		z-index: -1
 	}
 }
@@ -488,12 +488,12 @@ body  {
 @keyframes form-hidden  {
 	0%{
 		-webkit-transform: translate(-50%, 0%);
-		        transform: translate(-50%, 0%);
+		transform: translate(-50%, 0%);
 		
 	}
 	100%{
 		-webkit-transform: translate(-50%, -100%);
-		        transform: translate(-50%, -100%);
+		transform: translate(-50%, -100%);
 		z-index: -1
 	}
 }
@@ -501,24 +501,24 @@ body  {
 
 .register-form-shown  {
 	-webkit-animation: form-shown;
-	        animation: form-shown;
+	animation: form-shown;
 	-webkit-animation-duration: 0.1s;
-	        animation-duration: 0.1s;
+	animation-duration: 0.1s;
 	-webkit-animation-fill-mode: forwards;
-	        animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
 }
 
 
 @-webkit-keyframes form-shown  {
 	0%{
 		-webkit-transform: translate(-50%, -100%);
-		        transform: translate(-50%, -100%);
+		transform: translate(-50%, -100%);
 		opacity: 0;
 		z-index: -1
 	}
 	100%{
 		-webkit-transform: translate(-50%, 0%);
-		        transform: translate(-50%, 0%);
+		transform: translate(-50%, 0%);
 		opacity: 1;
 		z-index: 1
 	}
@@ -528,13 +528,13 @@ body  {
 @keyframes form-shown  {
 	0%{
 		-webkit-transform: translate(-50%, -100%);
-		        transform: translate(-50%, -100%);
+		transform: translate(-50%, -100%);
 		opacity: 0;
 		z-index: -1
 	}
 	100%{
 		-webkit-transform: translate(-50%, 0%);
-		        transform: translate(-50%, 0%);
+		transform: translate(-50%, 0%);
 		opacity: 1;
 		z-index: 1
 	}
@@ -735,7 +735,7 @@ body  {
 }
 
 
-.register-form-field  input::-ms-input-placeholder {
+.register-form-field  input:-ms-input-placeholder {
 	color: #000000;
 }
 
@@ -1083,7 +1083,7 @@ body  {
 }
 
 
-.button-info a:active  {
+.button-info:active  {
 	background-color: #5596BE;
 	color: #94B9D3;
 }
@@ -1119,7 +1119,6 @@ body  {
 .rating  {
 	margin-left: auto;
 	text-align: right;
-
 }
 
 
@@ -1363,7 +1362,6 @@ body  {
 
 
 .range-toggle:hover  {
-	background: #1c4f80;
 	width: 6px;
 	height: 6px;
 }
@@ -1551,11 +1549,6 @@ body  {
 }
 
 
-.up-down  + .current svg  {
-	fill: #80B3D2;
-}
-
-
 .up-down svg:hover,
 .up-down svg:focus  {
 	fill: #000000;
@@ -1563,5 +1556,21 @@ body  {
 
 
 .up-down svg:active  {
+	fill: #80B3D2;
+}
+
+
+.up-down  + .current svg  {
+	fill: #80B3D2;
+}
+
+
+.up-down  + .current svg:hover,
+.up-down  + .current svg:hover  {
+	fill: #000000;
+}
+
+
+.up-down  + .current svg:active   {
 	fill: #80B3D2;
 }
